# fritzbox-reconnect

./: pyproject.toml  shell.nix
src/fritzbox_reconnect/: fritzbox_reconnect.py
